# Password-Manager-Cli

./: .gitignore  Cargo.toml  LICENCE  README.md  TODO.md
src/lib/: generate_password.rs  helpers.rs  lib.rs
src/lib/args/: add.rs  args.rs  delete.rs  env.rs  list.rs  mod.rs  show.rs  update.rs
src/lib/config/: db.rs  dotenv.rs  mod.rs
src/lib/db/: password.rs
src/lib/menu/: menu.rs
src/lib/models/: args.rs  menu.rs  mod.rs  password.rs
src/lib/password/: db_password.rs  mod.rs  password.rs  password_tools.rs
src/lib/password/db_password/: delete.rs  mod.rs  update.rs
src/lib/print/: add.rs  delete.rs  env.rs  help.rs  mod.rs  show.rs  update.rs
