[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "password_manager"
path  ="src/lib/lib.rs"

[dependencies]
magic-crypt = "3.1.12"
cli-clipboard = "0.3.0"
rand = "0.8.5"
sqlite = "0.30.1"
crossterm = "0.25.0"
