[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
description ="Cli for managing passwords"
repository ="https://github.com/UtkuAltnkaya/Password-Manager-Cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="pm"
path ="src/bin/main.rs"

[lib]
name = "password_manager"
path  ="src/lib/lib.rs"

[dependencies]
dotenv = "0.15.0"
magic-crypt = "3.1.12"
cli-clipboard = "0.3.0"
rand = "0.8.5"
sqlite = "0.30.1"
crossterm = "0.25.0"
